# payment-intelligence-platform

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  payment_service.py  pyproject.toml  setup.cfg  webhook_handler.py
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: payments.py
app/core/: config.py  logging.py
app/db/: database.py
app/db/models/: __init__.py  payment.py  webhook_event.py
app/schemas/: payment.py
app/services/ai/: fraud_detection.py
app/services/stripe/: payment_service.py  webhook_handler.py
tests/unit/: test_payment_service.py
